tests/tests/snapshots/golden__gen__rust__crud-notes.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "notes"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service Notes`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
redis = { version = "0.27", features = ["tokio-comp"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/notes /usr/local/bin/app

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# Notes

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Or bring up the full stack (API, Postgres, Redis):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers and scheduled jobs | compiler |
| `src/config.rs` | Environment-driven settings | compiler |

Requests to protected routes need a bearer token signed with
`JWT_SECRET` (default `change-me`, algorithm HS256).
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/notes
      REDIS_URL: redis://cache:6379/0
      JWT_SECRET: ${JWT_SECRET:-change-me}
    depends_on:
      db:
        condition: service_healthy
      cache:
        condition: service_healthy

  db:
    image: postgres:16
    ports:
      - "5432:5432"
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: notes
    volumes:
      - db-data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U postgres"]
      interval: 2s
      timeout: 3s
      retries: 20

  cache:
    image: redis:7
    ports:
      - "6379:6379"
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 2s
      timeout: 3s
      retries: 20

volumes:
  db-data:
============================================================
src/auth.rs
============================================================
//! JWT authentication. Generated by CIaC.
//!
//! `Auth` pipeline steps become the [`Claims`] extractor: routes that take
//! a `Claims` argument reject requests without a valid bearer token.

use axum::extract::FromRequestParts;
use axum::http::header::AUTHORIZATION;
use axum::http::{request::Parts, StatusCode};
use jsonwebtoken::{Algorithm, DecodingKey, Validation};

use crate::error::AppError;
use crate::state::AppState;

/// Verified JWT claims of the current request.
#[derive(Debug, Clone)]
pub struct Claims(pub serde_json::Value);

impl Claims {
    /// The `sub` claim, if present.
    pub fn subject(&self) -> Option<&str> {
        self.0.get("sub").and_then(|v| v.as_str())
    }

    pub fn require_scope(&self, scope: &str) -> Result<(), AppError> {
        let has_scope = self
            .0
            .get("scope")
            .and_then(|value| value.as_str())
            .is_some_and(|scopes| scopes.split_whitespace().any(|item| item == scope))
            || self
                .0
                .get("scp")
                .and_then(|value| value.as_array())
                .is_some_and(|scopes| scopes.iter().any(|item| item.as_str() == Some(scope)));
        if has_scope {
            Ok(())
        } else {
            Err(AppError::forbidden())
        }
    }
}

impl FromRequestParts<AppState> for Claims {
    type Rejection = (StatusCode, &'static str);

    async fn from_request_parts(
        parts: &mut Parts,
        state: &AppState,
    ) -> Result<Self, Self::Rejection> {
        let token = parts
            .headers
            .get(AUTHORIZATION)
            .and_then(|value| value.to_str().ok())
            .and_then(|value| value.strip_prefix("Bearer "))
            .ok_or((StatusCode::UNAUTHORIZED, "missing bearer token"))?;
        let mut validation = Validation::new(Algorithm::HS256);
        validation.required_spec_claims.clear();
        let data = jsonwebtoken::decode::<serde_json::Value>(
            token,
            &DecodingKey::from_secret(state.config.jwt_secret.as_bytes()),
            &validation,
        )
        .map_err(|_| (StatusCode::UNAUTHORIZED, "invalid or expired token"))?;
        Ok(Claims(data.claims))
    }
}
============================================================
src/config.rs
============================================================
//! Runtime configuration for Notes. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub database_url: String,
    pub redis_url: String,
    pub jwt_secret: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            database_url: env_or(
                "DATABASE_URL",
                "postgres://postgres:postgres@localhost:5432/notes",
            ),
            redis_url: env_or("REDIS_URL", "redis://localhost:6379/0"),
            jwt_secret: env_or("JWT_SECRET", "change-me"),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/db.rs
============================================================
//! Database schema management. Generated by CIaC.


/// Creates CRUD-resource tables on startup (postgres). `table`
/// declarations (v0.7) are provisioned by the `migrations/` directory
/// instead, applied via `sqlx::migrate!` at startup (see `main.rs`).
/// The id key is `VARCHAR(36)` (a stringified UUID) rather than
/// `TEXT`: portable to engines that require sized index keys.
pub async fn ensure_schema_postgres(db: &sqlx::PgPool) -> anyhow::Result<()> {
    sqlx::query(
        "CREATE TABLE IF NOT EXISTS notes (
            id VARCHAR(36) PRIMARY KEY,
            data JSONB NOT NULL DEFAULT '{}'::jsonb
        )",
    )
    .execute(db)
    .await?;
    Ok(())
}
============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }

    pub fn forbidden() -> Self {
        Self {
            status: StatusCode::FORBIDDEN,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! Notes — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod auth;
pub mod db;
pub mod models;
pub mod services;
============================================================
src/main.rs
============================================================
use notes::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    notes::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    notes::db::ensure_schema_postgres(&state.db).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/models.rs
============================================================
//! Persistence models and API schemas for CRUD resources and `table`
//! declarations. Generated by CIaC.
//!
//! Typed resources (`crud X: Record;`) get real columns from their record;
//! untyped ones keep a generic keyed-document model (UUID key + JSON
//! payload). `table <Name>: <Record>;` declarations (v0.7) get the same
//! column treatment, named after the table so a record reused under
//! several table names doesn't collide. Enums are stored as text.

use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, sqlx::FromRow)]
pub struct Note {
    pub id: String,
    pub data: serde_json::Value,
}

/// Payload for creating or updating a Note.
#[derive(Debug, Clone, Deserialize)]
pub struct NoteIn {
    #[serde(default)]
    pub data: serde_json::Value,
}

============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod note;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(note::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/routes/note.rs
============================================================
//! REST endpoints for the `Note` resource. Generated by CIaC.

use axum::extract::{Path, Query, State};
use axum::http::StatusCode;
use axum::routing::{delete, get, post, put};
use axum::{Json, Router};

use crate::auth::Claims;
use crate::error::AppError;
use crate::models::{Note, NoteIn};
use crate::services::note_store::NoteStore;
use crate::state::AppState;

#[derive(Debug, serde::Deserialize)]
struct ListQuery {
    limit: Option<i64>,
    offset: Option<i64>,
}

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/notes", post(create_note))
        .route("/notes", get(list_notes))
        .route("/notes/{id}", get(get_note))
        .route("/notes/{id}", put(update_note))
        .route("/notes/{id}", delete(delete_note))
}

async fn create_note(
    State(state): State<AppState>,
    _claims: Claims,
    Json(payload): Json<NoteIn>,
) -> Result<(StatusCode, Json<Note>), AppError> {
    let entity = NoteStore::new(&state).create(payload).await?;
    Ok((StatusCode::CREATED, Json(entity)))
}

async fn list_notes(
    State(state): State<AppState>,
    _claims: Claims,
    Query(query): Query<ListQuery>,
) -> Result<Json<Vec<Note>>, AppError> {
    let entities = NoteStore::new(&state)
        .list(query.limit.unwrap_or(100), query.offset.unwrap_or(0))
        .await?;
    Ok(Json(entities))
}

async fn get_note(
    State(state): State<AppState>,
    _claims: Claims,
    Path(id): Path<String>,
) -> Result<Json<Note>, AppError> {
    match NoteStore::new(&state).get(&id).await? {
        Some(entity) => Ok(Json(entity)),
        None => Err(AppError::not_found()),
    }
}

async fn update_note(
    State(state): State<AppState>,
    _claims: Claims,
    Path(id): Path<String>,
    Json(payload): Json<NoteIn>,
) -> Result<Json<Note>, AppError> {
    match NoteStore::new(&state).update(&id, payload).await? {
        Some(entity) => Ok(Json(entity)),
        None => Err(AppError::not_found()),
    }
}

async fn delete_note(
    State(state): State<AppState>,
    _claims: Claims,
    Path(id): Path<String>,
) -> Result<StatusCode, AppError> {
    if NoteStore::new(&state).delete(&id).await? {
        Ok(StatusCode::NO_CONTENT)
    } else {
        Err(AppError::not_found())
    }
}
============================================================
src/services/mod.rs
============================================================
//! Business-logic handlers. Generated once by CIaC — this is where your
//! code goes.

pub mod note_store;
============================================================
src/services/note_store.rs
============================================================
//! Persistence for the `Note` resource. Generated by CIaC.

use redis::AsyncCommands;

use crate::models::{Note, NoteIn};
use crate::state::AppState;
/// CRUD operations for Note with read-through caching.
#[derive(Debug)]
pub struct NoteStore<'a> {
    pub db: &'a sqlx::PgPool,
    pub cache: &'a redis::Client,
}

impl<'a> NoteStore<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
            cache: &state.cache,
        }
    }


    pub async fn create(&self, payload: NoteIn) -> anyhow::Result<Note> {
        let entity = Note {
            id: uuid::Uuid::new_v4().to_string(),
            data: payload.data,
        };
        sqlx::query("INSERT INTO notes (id, data) VALUES ($1, $2)")
            .bind(&entity.id)
            .bind(&entity.data)
            .execute(self.db)
            .await?;
        Ok(entity)
    }

    pub async fn get(&self, id: &str) -> anyhow::Result<Option<Note>> {
        let mut cache = self.cache.get_multiplexed_async_connection().await?;
        if let Some(cached) = cache.get::<_, Option<String>>(cache_key(id)).await? {
            return Ok(Some(Note {
                id: id.to_owned(),
                data: serde_json::from_str(&cached)?,
            }));
        }
        let entity: Option<Note> =
            sqlx::query_as("SELECT id, data FROM notes WHERE id = $1")
                .bind(id)
                .fetch_optional(self.db)
                .await?;
        if let Some(entity) = &entity {
            let _: () = cache
                .set_ex(cache_key(id), serde_json::to_string(&entity.data)?, 300)
                .await?;
        }
        Ok(entity)
    }

    pub async fn list(&self, limit: i64, offset: i64) -> anyhow::Result<Vec<Note>> {
        let entities = sqlx::query_as("SELECT id, data FROM notes ORDER BY id LIMIT $1 OFFSET $2")
            .bind(limit)
            .bind(offset)
            .fetch_all(self.db)
            .await?;
        Ok(entities)
    }

    pub async fn update(
        &self,
        id: &str,
        payload: NoteIn,
    ) -> anyhow::Result<Option<Note>> {
        let updated = sqlx::query("UPDATE notes SET data = $1 WHERE id = $2")
            .bind(&payload.data)
            .bind(id)
            .execute(self.db)
            .await?;
        if updated.rows_affected() == 0 {
            return Ok(None);
        }
        let mut cache = self.cache.get_multiplexed_async_connection().await?;
        let _: () = cache.del(cache_key(id)).await?;
        Ok(Some(Note {
            id: id.to_owned(),
            data: payload.data,
        }))
    }

    pub async fn delete(&self, id: &str) -> anyhow::Result<bool> {
        let deleted = sqlx::query("DELETE FROM notes WHERE id = $1")
            .bind(id)
            .execute(self.db)
            .await?;
        let mut cache = self.cache.get_multiplexed_async_connection().await?;
        let _: () = cache.del(cache_key(id)).await?;
        Ok(deleted.rows_affected() > 0)
    }
}

fn cache_key(id: &str) -> String {
    format!("notes:{id}")
}

============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    /// Lazy pool: connections are established on first use, so the server
    /// starts (and compiles) without a running database.
    pub db: sqlx::PgPool,
    pub cache: redis::Client,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let db =
            sqlx::postgres::PgPoolOptions::new().connect_lazy(&config.database_url)?;
        let cache = redis::Client::open(config.redis_url.as_str())?;
        Ok(Self {
            config,
            db,
            cache,
        })
    }
}
