tests/tests/snapshots/golden__gen__rust__event-pipeline.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.gitignore
============================================================
/target
============================================================
Cargo.toml
============================================================
[package]
name = "ingest"
version = "0.1.0"
edition = "2021"
description = "Generated by CIaC from `service Ingest`"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
async-nats = "0.38"
futures = "0.3"
============================================================
Dockerfile
============================================================
FROM rust:1-slim AS build

WORKDIR /src
COPY . .
RUN cargo build --release

FROM debian:stable-slim

COPY --from=build /src/target/release/ingest /usr/local/bin/app
COPY --from=build /src/target/release/workers /usr/local/bin/workers

EXPOSE 8000
CMD ["app"]
============================================================
README.md
============================================================
# Ingest

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `src/services/`, which is yours.

## Run

```sh
cargo run
```

Workers run separately:

```sh
cargo run --bin workers
```

Or bring up the full stack (API, workers, Postgres, NATS):

```sh
docker compose up --build
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `src/main.rs` | Application assembly | compiler |
| `src/routes/` | HTTP routers (one per api) | compiler |
| `src/services/` | Business-logic handlers | **you** |
| `src/workers/` | Queue consumers | compiler |
| `src/config.rs` | Environment-driven settings | compiler |
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/ingest
      NATS_URL: nats://queue:4222
    depends_on:
      - db
      - queue

  workers:
    build: .
    command: ["workers"]
    environment:
      DATABASE_URL: postgres://postgres:postgres@db:5432/ingest
      NATS_URL: nats://queue:4222
    depends_on:
      - db
      - queue

  db:
    image: postgres:16
    environment:
      POSTGRES_PASSWORD: postgres
      POSTGRES_DB: ingest
    volumes:
      - db-data:/var/lib/postgresql/data

  queue:
    image: nats:2

volumes:
  db-data:
============================================================
src/bin/workers.rs
============================================================
//! Runs every worker in one process. Generated by CIaC.

use ingest::{config::Config, state::AppState, workers};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    ingest::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    tokio::try_join!(
        workers::processor::run(state.clone()),
        workers::page_view_consumer::run(state.clone()),
    )?;
    Ok(())
}
============================================================
src/config.rs
============================================================
//! Runtime configuration for Ingest. Generated by CIaC.
//!
//! Every value can be overridden through the environment, e.g.
//! `DATABASE_URL`; defaults target local development.

#[derive(Debug, Clone)]
pub struct Config {
    pub database_url: String,
    pub nats_url: String,
}

impl Config {
    pub fn from_env() -> Self {
        Self {
            database_url: env_or(
                "DATABASE_URL",
                "postgres://postgres:postgres@localhost:5432/ingest",
            ),
            nats_url: env_or("NATS_URL", "nats://localhost:4222"),
        }
    }
}

fn env_or(key: &str, default: &str) -> String {
    std::env::var(key).unwrap_or_else(|_| default.to_owned())
}
============================================================
src/error.rs
============================================================
//! Request error handling. Generated by CIaC.

use axum::http::StatusCode;
use axum::response::{IntoResponse, Response};

/// Route-level error: any `?`-propagated failure becomes a 500 with the
/// cause logged, and helpers construct intentional client errors.
#[derive(Debug)]
pub struct AppError {
    status: StatusCode,
    source: Option<anyhow::Error>,
}

impl AppError {
    pub fn not_found() -> Self {
        Self {
            status: StatusCode::NOT_FOUND,
            source: None,
        }
    }
}

impl IntoResponse for AppError {
    fn into_response(self) -> Response {
        if let Some(source) = &self.source {
            tracing::error!(error = ?source, "request failed");
        }
        let message = self
            .status
            .canonical_reason()
            .unwrap_or("error")
            .to_ascii_lowercase();
        (self.status, message).into_response()
    }
}

impl<E> From<E> for AppError
where
    E: Into<anyhow::Error>,
{
    fn from(err: E) -> Self {
        Self {
            status: StatusCode::INTERNAL_SERVER_ERROR,
            source: Some(err.into()),
        }
    }
}
============================================================
src/lib.rs
============================================================
//! Ingest — generated by CIaC.
//!
//! Compiler-owned wiring lives at the crate root and in `routes`/`workers`;
//! business logic belongs in `services`, which is yours.

pub mod config;
pub mod error;
pub mod observability;
pub mod routes;
pub mod state;
pub mod services;
pub mod workers;
============================================================
src/main.rs
============================================================
use ingest::{config::Config, routes, state::AppState};

#[tokio::main]
async fn main() -> anyhow::Result<()> {
    ingest::observability::init();
    let config = Config::from_env();
    let state = AppState::new(config).await?;
    let app = routes::router().with_state(state);
    let listener = tokio::net::TcpListener::bind(("0.0.0.0", 8000)).await?;
    tracing::info!("listening on 0.0.0.0:8000");
    axum::serve(listener, app).await?;
    Ok(())
}
============================================================
src/observability.rs
============================================================
//! Observability wiring. Generated by CIaC.

pub fn init() {
    let filter = tracing_subscriber::EnvFilter::try_from_default_env()
        .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
    tracing_subscriber::fmt().with_env_filter(filter).init();
}
============================================================
src/routes/mod.rs
============================================================
//! HTTP routing. Generated by CIaC.

pub mod submit;

use axum::routing::get;
use axum::{Json, Router};

use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new()
        .route("/health", get(health))
        .merge(submit::router())
}

async fn health() -> Json<serde_json::Value> {
    Json(serde_json::json!({"status": "ok"}))
}

============================================================
src/routes/submit.rs
============================================================
//! Request pipeline for `api Submit`. Generated by CIaC.
//!
//! Pipeline: Validate -> Queue -> Return

use axum::extract::State;
use axum::routing::post;
use axum::{Json, Router};

use crate::error::AppError;
use crate::services::validate::Validate;
use crate::state::AppState;

pub fn router() -> Router<AppState> {
    Router::new().route("/submit", post(submit))
}

async fn submit(
    State(state): State<AppState>,
    Json(payload): Json<serde_json::Value>,
) -> Result<Json<serde_json::Value>, AppError> {
    let result = payload;
    let result = Validate::new(&state).handle(result).await?;
    state
        .queue
        .publish("ingest.events", serde_json::to_vec(&result)?.into())
        .await?;
    Ok(Json(serde_json::json!({"status": "accepted", "data": result})))
}
============================================================
src/services/enrich.rs
============================================================
//! Handler for the `Enrich` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `Enrich` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::state::AppState;

/// Business logic for the `Enrich` step.
#[derive(Debug)]
pub struct Enrich<'a> {
    pub db: &'a sqlx::PgPool,
}

impl<'a> Enrich<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
        }
    }

    pub async fn handle(
        &self,
        payload: serde_json::Value,
    ) -> anyhow::Result<serde_json::Value> {
        // TODO: implement the Enrich step.
        Ok(payload)
    }
}
============================================================
src/services/mod.rs
============================================================
//! Business-logic handlers. Generated once by CIaC — this is where your
//! code goes.

pub mod validate;
pub mod enrich;
pub mod store;
============================================================
src/services/store.rs
============================================================
//! Handler for the `Store` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `Store` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::state::AppState;

/// Business logic for the `Store` step.
#[derive(Debug)]
pub struct Store<'a> {
    pub db: &'a sqlx::PgPool,
}

impl<'a> Store<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
        }
    }

    pub async fn handle(
        &self,
        payload: serde_json::Value,
    ) -> anyhow::Result<serde_json::Value> {
        // TODO: implement the Store step.
        Ok(payload)
    }
}
============================================================
src/services/validate.rs
============================================================
//! Handler for the `Validate` pipeline step. Generated by CIaC.
//!
//! This file is yours: the compiler wires `Validate` into
//! its pipelines, and you implement the business logic in `handle`.

use crate::state::AppState;

/// Business logic for the `Validate` step.
#[derive(Debug)]
pub struct Validate<'a> {
    pub db: &'a sqlx::PgPool,
}

impl<'a> Validate<'a> {
    pub fn new(state: &'a AppState) -> Self {
        Self {
            db: &state.db,
        }
    }

    pub async fn handle(
        &self,
        payload: serde_json::Value,
    ) -> anyhow::Result<serde_json::Value> {
        // TODO: implement the Validate step.
        Ok(payload)
    }
}
============================================================
src/state.rs
============================================================
//! Shared application state. Generated by CIaC.

use crate::config::Config;

#[derive(Debug, Clone)]
pub struct AppState {
    pub config: Config,
    /// Lazy pool: connections are established on first use, so the server
    /// starts (and compiles) without a running database.
    pub db: sqlx::PgPool,
    pub queue: async_nats::Client,
}

impl AppState {
    pub async fn new(config: Config) -> anyhow::Result<Self> {
        let db = sqlx::postgres::PgPoolOptions::new().connect_lazy(&config.database_url)?;
        let queue = async_nats::connect(&config.nats_url).await?;
        Ok(Self {
            config,
            db,
            queue,
        })
    }
}
============================================================
src/workers/mod.rs
============================================================
//! Queue-driven workers. Generated by CIaC.
//!
//! Run them all with `cargo run --bin workers`.

pub mod processor;
pub mod page_view_consumer;
============================================================
src/workers/page_view_consumer.rs
============================================================
//! Event consumer for `events PageViewConsumer`. Generated by CIaC.
//!
//! Consumes `ingest.page_view` in queue group `page_view_consumer`.

use futures::StreamExt;

use crate::state::AppState;

pub const SUBJECT: &str = "ingest.page_view";
pub const QUEUE_GROUP: &str = "page_view_consumer";

pub async fn run(state: AppState) -> anyhow::Result<()> {
    let mut subscription = state
        .queue
        .queue_subscribe(SUBJECT, QUEUE_GROUP.to_owned())
        .await?;
    tracing::info!(subject = SUBJECT, "consumer PageViewConsumer listening");
    while let Some(message) = subscription.next().await {
        let payload: serde_json::Value = match serde_json::from_slice(&message.payload) {
            Ok(payload) => payload,
            Err(err) => {
                tracing::warn!(?err, "discarding malformed event");
                continue;
            }
        };
        if let Err(err) = handle_event(&state, payload).await {
            tracing::error!(?err, "event processing failed");
        }
    }
    Ok(())
}

async fn handle_event(_state: &AppState, payload: serde_json::Value) -> anyhow::Result<()> {
    // TODO: persist or process the PageViewConsumer event.
    let _ = payload;
    Ok(())
}
============================================================
src/workers/processor.rs
============================================================
//! Worker pipeline for `worker Processor`. Generated by CIaC.
//!
//! Consumes `ingest.events` in queue group `processor`
//! so replicas of this worker load-balance messages between them.

use futures::StreamExt;

use crate::services::enrich::Enrich;
use crate::services::store::Store;
use crate::state::AppState;

pub const SUBJECT: &str = "ingest.events";
pub const QUEUE_GROUP: &str = "processor";

pub async fn run(state: AppState) -> anyhow::Result<()> {
    let mut subscription = state
        .queue
        .queue_subscribe(SUBJECT, QUEUE_GROUP.to_owned())
        .await?;
    tracing::info!(subject = SUBJECT, "worker Processor consuming");
    while let Some(message) = subscription.next().await {
        let payload: serde_json::Value = match serde_json::from_slice(&message.payload) {
            Ok(payload) => payload,
            Err(err) => {
                tracing::warn!(?err, "discarding malformed message");
                continue;
            }
        };
        if let Err(err) = handle_message(&state, payload).await {
            tracing::error!(?err, "message processing failed");
        }
    }
    Ok(())
}

async fn handle_message(state: &AppState, payload: serde_json::Value) -> anyhow::Result<()> {
    let result = payload;
    let result = Enrich::new(state).handle(result).await?;
    let result = Store::new(state).handle(result).await?;
    let _ = result;
    Ok(())
}
